--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,13 @@
 <html>
-  <head>
-    <title>Angular App</title>
-  </head>
-  <body>
+
+<head>
+  <title>Angular App</title>
+  <base href="/">
+</head>
+
+<body>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<div class="mat-app-background basic-container">
-  <table-http>loading</table-http>
-</div>
+  <app-root></app-root>
+</body>
 
-
-  </body>
 </html>
